running test with packages

--- a/TestNG/test-output/emailable-report.html
+++ b/TestNG/test-output/emailable-report.html
@@ -9,20 +9,17 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Loan project</th></tr>
-<tr><td><a href="#t0">personal loan</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">55</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Car loan</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">5</td><td></td><td></td></tr>
-<tr><td><a href="#t2">Home loan</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">10</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">6</th><th class="num">0</th><th class="num">0</th><th class="num">70</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">personal loan</a></td><td class="num">8</td><td class="num">0</td><td class="num">0</td><td class="num">104</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Loan project</th></tr></tbody><tbody id="t0"><tr><th colspan="4">personal loan &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">test.basics</td><td><a href="#m0">Demo</a></td><td rowspan="1">1534360529466</td><td rowspan="1">15</td></tr><tr class="passedeven"><td><a href="#m1">Test</a></td><td rowspan="1">1534360529483</td><td rowspan="1">2</td></tr><tr class="passedodd"><td rowspan="1">test.login</td><td><a href="#m2">WebLoginhome</a></td><td rowspan="1">1534360529490</td><td rowspan="1">1</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Car loan &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">test.basics2</td><td><a href="#m3">day2</a></td><td rowspan="1">1534360529536</td><td rowspan="1">1</td></tr></tbody>
-<tbody id="t2"><tr><th colspan="4">Home loan &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">test.login</td><td><a href="#m4">LoginApi</a></td><td rowspan="1">1534360529548</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m5">MobileLogin</a></td><td rowspan="1">1534360529552</td><td rowspan="1">2</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Loan project</th></tr></tbody><tbody id="t0"><tr><th colspan="4">personal loan &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">test.basics</td><td><a href="#m0">Demo</a></td><td rowspan="1">1534361339389</td><td rowspan="1">11</td></tr><tr class="passedeven"><td><a href="#m1">Test</a></td><td rowspan="1">1534361339404</td><td rowspan="1">6</td></tr><tr class="passedodd"><td rowspan="1">test.basics2</td><td><a href="#m2">day2</a></td><td rowspan="1">1534361339422</td><td rowspan="1">8</td></tr><tr class="passedeven"><td rowspan="5">test.login</td><td><a href="#m3">APIRest</a></td><td rowspan="1">1534361339432</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m4">MobileLogin</a></td><td rowspan="1">1534361339437</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m5">WebLoginhome</a></td><td rowspan="1">1534361339441</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m6">WebSigninhome</a></td><td rowspan="1">1534361339446</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m7">WebSignouthome</a></td><td rowspan="1">1534361339450</td><td rowspan="1">2</td></tr></tbody>
 </table>
 <h2>personal loan</h2><h3 id="m0">test.basics#Demo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">test.basics#Test</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">test.login#WebLoginhome</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Car loan</h2><h3 id="m3">test.basics2#day2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Home loan</h2><h3 id="m4">test.login#LoginApi</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">test.login#MobileLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">test.basics2#day2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">test.login#APIRest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">test.login#MobileLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">test.login#WebLoginhome</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">test.login#WebSigninhome</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">test.login#WebSignouthome</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
