--- a/TestNG/test-output/index.html
+++ b/TestNG/test-output/index.html
@@ -49,12 +49,12 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Loan_project">
-                    <span>C:\bhanu\selenium course\selenium\TestNG\testng.xml</span>
+                    <span>C:\bhanu\selenium course\selenium\TestNG\testng2.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
                   <a href="#" class="navigator-link " panel-name="testlist-Loan_project">
-                    <span class="test-stats">3 tests</span>
+                    <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods,   6 passed</span>
+                    <span class="method-stats">8 methods,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +102,12 @@
                     <div class="method-list-content passed suite-Loan_project">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Loan_project" title="test.basics" hash-for-method="Demo">Demo</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Loan_project" title="test.login" hash-for-method="APIRest">APIRest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Loan_project" title="test.login" hash-for-method="LoginApi">LoginApi</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Loan_project" title="test.basics" hash-for-method="Demo">Demo</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -127,6 +127,16 @@
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Loan_project" title="test.login" hash-for-method="WebSigninhome">WebSigninhome</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Loan_project" title="test.login" hash-for-method="WebSignouthome">WebSignouthome</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Loan_project" title="test.basics2" hash-for-method="day2">day2</a> <!-- method navigator-link -->
                       </span>
                       <br/>
@@ -142,28 +152,6 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Loan_project" class="panel Loan_project">
-          <div class="suite-Loan_project-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">test.basics</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="Demo">
-                  </a> <!-- Demo -->
-                  <span class="method-name">Demo</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="Test">
-                  </a> <!-- Test -->
-                  <span class="method-name">Test</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Loan_project-class-passed -->
           <div class="suite-Loan_project-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -187,9 +175,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginApi">
-                  </a> <!-- LoginApi -->
-                  <span class="method-name">LoginApi</span>
+                  <a name="APIRest">
+                  </a> <!-- APIRest -->
+                  <span class="method-name">APIRest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -206,12 +194,48 @@
                   <span class="method-name">WebLoginhome</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="WebSigninhome">
+                  </a> <!-- WebSigninhome -->
+                  <span class="method-name">WebSigninhome</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="WebSignouthome">
+                  </a> <!-- WebSignouthome -->
+                  <span class="method-name">WebSignouthome</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Loan_project-class-passed -->
+          <div class="suite-Loan_project-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">test.basics</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="Demo">
+                  </a> <!-- Demo -->
+                  <span class="method-name">Demo</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Test">
+                  </a> <!-- Test -->
+                  <span class="method-name">Test</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Loan_project-class-passed -->
         </div> <!-- panel Loan_project -->
         <div panel-name="test-xml-Loan_project" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\bhanu\selenium course\selenium\TestNG\testng.xml</span>
+            <span class="header-content">C:\bhanu\selenium course\selenium\TestNG\testng2.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -219,29 +243,15 @@
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Loan project&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;personal loan&quot;&gt;
+    &lt;packages&gt;
+      &lt;package name=&quot;test&quot;/&gt;
+    &lt;/packages&gt;
     &lt;classes&gt;
       &lt;class name=&quot;test.basics&quot;/&gt;
-      &lt;class name=&quot;test.login&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;WebLoginhome&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- test.login --&gt;
+      &lt;class name=&quot;test.basics2&quot;/&gt;
+      &lt;class name=&quot;test.login&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- personal loan --&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Car loan&quot;&gt;
-    &lt;classes&gt;
-      &lt;class name=&quot;test.basics2&quot;/&gt;
-    &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Car loan --&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Home loan&quot;&gt;
-    &lt;classes&gt;
-      &lt;class name=&quot;test.login&quot;&gt;
-        &lt;methods&gt;
-          &lt;exclude name=&quot;WebLoginhome&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- test.login --&gt;
-    &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Home loan --&gt;
 &lt;/suite&gt; &lt;!-- Loan project --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -253,13 +263,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">personal loan (2 classes)</span>
-              </li>
-              <li>
-                <span class="test-name">Car loan (1 class)</span>
-              </li>
-              <li>
-                <span class="test-name">Home loan (1 class)</span>
+                <span class="test-name">personal loan (3 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -285,36 +289,44 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(6);
+data.addRows(8);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Demo')
 data.setCell(0, 2, 'test.basics')
-data.setCell(0, 3, 15);
+data.setCell(0, 3, 11);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'Test')
-data.setCell(1, 2, 'test.basics')
-data.setCell(1, 3, 2);
+data.setCell(1, 1, 'day2')
+data.setCell(1, 2, 'test.basics2')
+data.setCell(1, 3, 8);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'LoginApi')
-data.setCell(2, 2, 'test.login')
-data.setCell(2, 3, 2);
+data.setCell(2, 1, 'Test')
+data.setCell(2, 2, 'test.basics')
+data.setCell(2, 3, 6);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'MobileLogin')
+data.setCell(3, 1, 'APIRest')
 data.setCell(3, 2, 'test.login')
-data.setCell(3, 3, 2);
+data.setCell(3, 3, 3);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'WebLoginhome')
+data.setCell(4, 1, 'MobileLogin')
 data.setCell(4, 2, 'test.login')
-data.setCell(4, 3, 1);
+data.setCell(4, 3, 2);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'day2')
-data.setCell(5, 2, 'test.basics2')
-data.setCell(5, 3, 1);
+data.setCell(5, 1, 'WebLoginhome')
+data.setCell(5, 2, 'test.login')
+data.setCell(5, 3, 2);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'WebSigninhome')
+data.setCell(6, 2, 'test.login')
+data.setCell(6, 3, 2);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'WebSignouthome')
+data.setCell(7, 2, 'test.login')
+data.setCell(7, 3, 2);
 window.suiteTableData['Loan_project']= { tableData: data, tableDiv: 'times-div-Loan_project'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 23 ms</span>
+              <span class="suite-total-time">Total running time: 36 ms</span>
               <div id="times-div-Loan_project">
               </div> <!-- times-div-Loan_project -->
             </div> <!-- times-div -->
@@ -329,20 +341,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Loan_project" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">3 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">test.login</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">LoginApi</span>
-                <br/>
-                <span class="ignored-method-name">MobileLogin</span>
-                <br/>
-                <span class="ignored-method-name">WebLoginhome</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Loan_project" class="panel">
@@ -358,32 +359,37 @@ return data;
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Test</span>
-                <span class="method-start">17 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">test.login</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">WebLoginhome</span>
-                <span class="method-start">24 ms</span>
+                <span class="method-start">15 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">test.basics2</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">day2</span>
-                <span class="method-start">70 ms</span>
+                <span class="method-start">33 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">test.login</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">LoginApi</span>
-                <span class="method-start">82 ms</span>
+                <span class="method-name">APIRest</span>
+                <span class="method-start">43 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">MobileLogin</span>
-                <span class="method-start">86 ms</span>
+                <span class="method-start">48 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">WebLoginhome</span>
+                <span class="method-start">52 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">WebSigninhome</span>
+                <span class="method-start">57 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">WebSignouthome</span>
+                <span class="method-start">61 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
