--- a/TestNG/test-output/old/Loan project/classes.html
+++ b/TestNG/test-output/old/Loan project/classes.html
@@ -37,11 +37,19 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>MobileLogin</td>
+<td>WebSignouthome</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>LoginApi</td>
+<td>WebSigninhome</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>APIRest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>MobileLogin</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
