--- a/TestNG/test-output/old/Loan project/methods-alphabetical.html
+++ b/TestNG/test-output/old/Loan project/methods-alphabetical.html
@@ -1,16 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Loan project</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7471b5">  <td>18/08/15 16:15:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics.Demo()[pri:0, instance:test.basics@16d4b5c]">Demo</td> 
-  <td>main@20191344</td>   <td></td> </tr>
-<tr bgcolor="acb575">  <td>18/08/15 16:15:29</td>   <td>82</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.LoginApi()[pri:0, instance:test.login@18355a8]">LoginApi</td> 
-  <td>main@20191344</td>   <td></td> </tr>
-<tr bgcolor="acb575">  <td>18/08/15 16:15:29</td>   <td>86</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.MobileLogin()[pri:0, instance:test.login@18355a8]">MobileLogin</td> 
-  <td>main@20191344</td>   <td></td> </tr>
-<tr bgcolor="7471b5">  <td>18/08/15 16:15:29</td>   <td>17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics.Test()[pri:0, instance:test.basics@16d4b5c]">Test</td> 
-  <td>main@20191344</td>   <td></td> </tr>
-<tr bgcolor="acb575">  <td>18/08/15 16:15:29</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebLoginhome()[pri:0, instance:test.login@34c75a]">WebLoginhome</td> 
-  <td>main@20191344</td>   <td></td> </tr>
-<tr bgcolor="98978d">  <td>18/08/15 16:15:29</td>   <td>70</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics2.day2()[pri:0, instance:test.basics2@15530b9]">day2</td> 
-  <td>main@20191344</td>   <td></td> </tr>
+<tr bgcolor="75a3bc">  <td>18/08/15 16:28:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.APIRest()[pri:0, instance:test.login@19f379]">APIRest</td> 
+  <td>main@31372558</td>   <td></td> </tr>
+<tr bgcolor="749ee9">  <td>18/08/15 16:28:59</td>   <td>-44</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics.Demo()[pri:0, instance:test.basics@ee68d8]">Demo</td> 
+  <td>main@31372558</td>   <td></td> </tr>
+<tr bgcolor="75a3bc">  <td>18/08/15 16:28:59</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.MobileLogin()[pri:0, instance:test.login@19f379]">MobileLogin</td> 
+  <td>main@31372558</td>   <td></td> </tr>
+<tr bgcolor="749ee9">  <td>18/08/15 16:28:59</td>   <td>-28</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics.Test()[pri:0, instance:test.basics@ee68d8]">Test</td> 
+  <td>main@31372558</td>   <td></td> </tr>
+<tr bgcolor="75a3bc">  <td>18/08/15 16:28:59</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebLoginhome()[pri:0, instance:test.login@19f379]">WebLoginhome</td> 
+  <td>main@31372558</td>   <td></td> </tr>
+<tr bgcolor="75a3bc">  <td>18/08/15 16:28:59</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebSigninhome()[pri:0, instance:test.login@19f379]">WebSigninhome</td> 
+  <td>main@31372558</td>   <td></td> </tr>
+<tr bgcolor="75a3bc">  <td>18/08/15 16:28:59</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebSignouthome()[pri:0, instance:test.login@19f379]">WebSignouthome</td> 
+  <td>main@31372558</td>   <td></td> </tr>
+<tr bgcolor="96f0f5">  <td>18/08/15 16:28:59</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics2.day2()[pri:0, instance:test.basics2@120ebad]">day2</td> 
+  <td>main@31372558</td>   <td></td> </tr>
 </table>
