--- a/TestNG/test-output/old/Loan project/classes.html
+++ b/TestNG/test-output/old/Loan project/classes.html
@@ -15,7 +15,7 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Test</td>
+<td>demo2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -45,11 +45,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>APIRest</td>
+<td>MobileLogin</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>MobileLogin</td>
+<td>APIRest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
