--- a/TestNG/test-output/index.html
+++ b/TestNG/test-output/index.html
@@ -49,12 +49,12 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Loan_project">
-                    <span>C:\bhanu\selenium course\selenium\TestNG\testng2.xml</span>
+                    <span>C:\bhanu\selenium course\selenium\TestNG\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
                   <a href="#" class="navigator-link " panel-name="testlist-Loan_project">
-                    <span class="test-stats">1 test</span>
+                    <span class="test-stats">3 tests</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,11 +102,6 @@
                     <div class="method-list-content passed suite-Loan_project">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Loan_project" title="test.login" hash-for-method="APIRest">APIRest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Loan_project" title="test.basics" hash-for-method="Demo">Demo</a> <!-- method navigator-link -->
                       </span>
                       <br/>
@@ -117,7 +112,7 @@
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Loan_project" title="test.basics" hash-for-method="Test">Test</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Loan_project" title="test.login" hash-for-method="WebLoginhome">WebLoginhome</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -140,6 +135,11 @@
                         <a href="#" class="method navigator-link" panel-name="suite-Loan_project" title="test.basics2" hash-for-method="day2">day2</a> <!-- method navigator-link -->
                       </span>
                       <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Loan_project" title="test.basics" hash-for-method="demo2">demo2</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                     </div> <!-- method-list-content passed suite-Loan_project -->
                   </li>
                 </ul>
@@ -155,14 +155,21 @@
           <div class="suite-Loan_project-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">test.basics2</span>
+              <span class="class-name">test.basics</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="day2">
-                  </a> <!-- day2 -->
-                  <span class="method-name">day2</span>
+                  <a name="Demo">
+                  </a> <!-- Demo -->
+                  <span class="method-name">Demo</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="demo2">
+                  </a> <!-- demo2 -->
+                  <span class="method-name">demo2</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -175,16 +182,16 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="APIRest">
-                  </a> <!-- APIRest -->
-                  <span class="method-name">APIRest</span>
+                  <a name="MobileLogin">
+                  </a> <!-- MobileLogin -->
+                  <span class="method-name">MobileLogin</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="MobileLogin">
-                  </a> <!-- MobileLogin -->
-                  <span class="method-name">MobileLogin</span>
+                  <a name="WebLoginhome">
+                  </a> <!-- WebLoginhome -->
+                  <span class="method-name">WebLoginhome</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -213,21 +220,14 @@
           <div class="suite-Loan_project-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">test.basics</span>
+              <span class="class-name">test.basics2</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Demo">
-                  </a> <!-- Demo -->
-                  <span class="method-name">Demo</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="Test">
-                  </a> <!-- Test -->
-                  <span class="method-name">Test</span>
+                  <a name="day2">
+                  </a> <!-- day2 -->
+                  <span class="method-name">day2</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -235,7 +235,7 @@
         </div> <!-- panel Loan_project -->
         <div panel-name="test-xml-Loan_project" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\bhanu\selenium course\selenium\TestNG\testng2.xml</span>
+            <span class="header-content">C:\bhanu\selenium course\selenium\TestNG\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -243,15 +243,29 @@
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Loan project&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;personal loan&quot;&gt;
-    &lt;packages&gt;
-      &lt;package name=&quot;test&quot;/&gt;
-    &lt;/packages&gt;
     &lt;classes&gt;
       &lt;class name=&quot;test.basics&quot;/&gt;
-      &lt;class name=&quot;test.basics2&quot;/&gt;
-      &lt;class name=&quot;test.login&quot;/&gt;
+      &lt;class name=&quot;test.login&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;WebLoginhome&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- test.login --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- personal loan --&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Car loan&quot;&gt;
+    &lt;classes&gt;
+      &lt;class name=&quot;test.basics2&quot;/&gt;
+    &lt;/classes&gt;
+  &lt;/test&gt; &lt;!-- Car loan --&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Home loan&quot;&gt;
+    &lt;classes&gt;
+      &lt;class name=&quot;test.login&quot;&gt;
+        &lt;methods&gt;
+          &lt;exclude name=&quot;API.*&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- test.login --&gt;
+    &lt;/classes&gt;
+  &lt;/test&gt; &lt;!-- Home loan --&gt;
 &lt;/suite&gt; &lt;!-- Loan project --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -263,7 +277,13 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">personal loan (3 classes)</span>
+                <span class="test-name">personal loan (2 classes)</span>
+              </li>
+              <li>
+                <span class="test-name">Car loan (1 class)</span>
+              </li>
+              <li>
+                <span class="test-name">Home loan (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -291,21 +311,21 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(8);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Demo')
-data.setCell(0, 2, 'test.basics')
+data.setCell(0, 1, 'WebSigninhome')
+data.setCell(0, 2, 'test.login')
 data.setCell(0, 3, 11);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'day2')
-data.setCell(1, 2, 'test.basics2')
-data.setCell(1, 3, 8);
+data.setCell(1, 1, 'Demo')
+data.setCell(1, 2, 'test.basics')
+data.setCell(1, 3, 5);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'Test')
-data.setCell(2, 2, 'test.basics')
-data.setCell(2, 3, 6);
+data.setCell(2, 1, 'WebLoginhome')
+data.setCell(2, 2, 'test.login')
+data.setCell(2, 3, 2);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'APIRest')
-data.setCell(3, 2, 'test.login')
-data.setCell(3, 3, 3);
+data.setCell(3, 1, 'demo2')
+data.setCell(3, 2, 'test.basics')
+data.setCell(3, 3, 2);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'MobileLogin')
 data.setCell(4, 2, 'test.login')
@@ -315,18 +335,18 @@ data.setCell(5, 1, 'WebLoginhome')
 data.setCell(5, 2, 'test.login')
 data.setCell(5, 3, 2);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'WebSigninhome')
+data.setCell(6, 1, 'WebSignouthome')
 data.setCell(6, 2, 'test.login')
 data.setCell(6, 3, 2);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'WebSignouthome')
-data.setCell(7, 2, 'test.login')
-data.setCell(7, 3, 2);
+data.setCell(7, 1, 'day2')
+data.setCell(7, 2, 'test.basics2')
+data.setCell(7, 3, 1);
 window.suiteTableData['Loan_project']= { tableData: data, tableDiv: 'times-div-Loan_project'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 36 ms</span>
+              <span class="suite-total-time">Total running time: 27 ms</span>
               <div id="times-div-Loan_project">
               </div> <!-- times-div-Loan_project -->
             </div> <!-- times-div -->
@@ -341,9 +361,24 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Loan_project" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">5 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">test.login</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">WebSigninhome</span>
+                <br/>
+                <span class="ignored-method-name">MobileLogin</span>
+                <br/>
+                <span class="ignored-method-name">APIRest</span>
+                <br/>
+                <span class="ignored-method-name">APIRest</span>
+                <br/>
+                <span class="ignored-method-name">WebSignouthome</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Loan_project" class="panel">
@@ -353,43 +388,71 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">test.basics</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">Demo</span>
+              <div class="configuration-test before">
+                <span class="method-name">prerequisite</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">Test</span>
-                <span class="method-start">15 ms</span>
-              </div> <!-- test-method -->
+              </div> <!-- configuration-test before -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">test.basics2</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">test.login</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">Webprerequisite</span>
+                <span class="method-start">12 ms</span>
+              </div> <!-- configuration-test before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">test.basics</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">day2</span>
-                <span class="method-start">33 ms</span>
+                <span class="method-name">Demo</span>
+                <span class="method-start">69 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">demo2</span>
+                <span class="method-start">76 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">test.login</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">APIRest</span>
-                <span class="method-start">43 ms</span>
+                <span class="method-name">WebLoginhome</span>
+                <span class="method-start">81 ms</span>
               </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">test.basics</div> <!-- chronological-class-name -->
+              <div class="configuration-test after">
+                <span class="method-name">postrequisite</span>
+                <span class="method-start">86 ms</span>
+              </div> <!-- configuration-test after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">test.basics2</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">day2</span>
+                <span class="method-start">130 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">test.login</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">Webprerequisite</span>
+                <span class="method-start">141 ms</span>
+              </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">MobileLogin</span>
-                <span class="method-start">48 ms</span>
+                <span class="method-start">142 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">WebLoginhome</span>
-                <span class="method-start">52 ms</span>
+                <span class="method-start">145 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">WebSigninhome</span>
-                <span class="method-start">57 ms</span>
+                <span class="method-start">151 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">WebSignouthome</span>
-                <span class="method-start">61 ms</span>
+                <span class="method-start">164 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
