--- a/TestNG/test-output/old/Default suite/classes.html
+++ b/TestNG/test-output/old/Default suite/classes.html
@@ -15,7 +15,7 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Test</td>
+<td>demo2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
