--- a/TestNG/test-output/old/Loan project/methods.html
+++ b/TestNG/test-output/old/Loan project/methods.html
@@ -1,28 +1,44 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Loan project</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7471b5">  <td>18/08/15 16:41:50</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;basics.prerequisite()[pri:0, instance:test.basics@12cc05a]">&gt;&gt;prerequisite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@21735538</td>   <td></td> </tr>
-<tr bgcolor="acb575">  <td>18/08/15 16:41:50</td>   <td>6</td> <td>&nbsp;</td><td title="&gt;&gt;login.Webprerequisite()[pri:0, instance:test.login@1933fd1]">&gt;&gt;Webprerequisite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@21735538</td>   <td></td> </tr>
-<tr bgcolor="7471b5">  <td>18/08/15 16:41:50</td>   <td>63</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics.Demo()[pri:0, instance:test.basics@12cc05a]">Demo</td> 
-  <td>main@21735538</td>   <td></td> </tr>
-<tr bgcolor="7471b5">  <td>18/08/15 16:41:50</td>   <td>70</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics.demo2()[pri:0, instance:test.basics@12cc05a]">demo2</td> 
-  <td>main@21735538</td>   <td></td> </tr>
-<tr bgcolor="acb575">  <td>18/08/15 16:41:50</td>   <td>75</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebLoginhome()[pri:0, instance:test.login@1933fd1]">WebLoginhome</td> 
-  <td>main@21735538</td>   <td></td> </tr>
-<tr bgcolor="7471b5">  <td>18/08/15 16:41:50</td>   <td>80</td> <td>&nbsp;</td><td title="&lt;&lt;basics.postrequisite()[pri:0, instance:test.basics@12cc05a]">&lt;&lt;postrequisite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@21735538</td>   <td></td> </tr>
-<tr bgcolor="9884b2">  <td>18/08/15 16:41:50</td>   <td>124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics2.day2()[pri:0, instance:test.basics2@1832929]">day2</td> 
-  <td>main@21735538</td>   <td></td> </tr>
-<tr bgcolor="acb575">  <td>18/08/15 16:41:50</td>   <td>135</td> <td>&nbsp;</td><td title="&gt;&gt;login.Webprerequisite()[pri:0, instance:test.login@e45eb6]">&gt;&gt;Webprerequisite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@21735538</td>   <td></td> </tr>
-<tr bgcolor="acb575">  <td>18/08/15 16:41:50</td>   <td>136</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.MobileLogin()[pri:0, instance:test.login@e45eb6]">MobileLogin</td> 
-  <td>main@21735538</td>   <td></td> </tr>
-<tr bgcolor="acb575">  <td>18/08/15 16:41:50</td>   <td>139</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebLoginhome()[pri:0, instance:test.login@e45eb6]">WebLoginhome</td> 
-  <td>main@21735538</td>   <td></td> </tr>
-<tr bgcolor="acb575">  <td>18/08/15 16:41:50</td>   <td>145</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebSigninhome()[pri:0, instance:test.login@e45eb6]">WebSigninhome</td> 
-  <td>main@21735538</td>   <td></td> </tr>
-<tr bgcolor="acb575">  <td>18/08/15 16:41:50</td>   <td>158</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebSignouthome()[pri:0, instance:test.login@e45eb6]">WebSignouthome</td> 
-  <td>main@21735538</td>   <td></td> </tr>
+<tr bgcolor="75a3bc">  <td>18/08/15 17:01:33</td>   <td>0</td> <td title="&gt;&gt;login.prerequisitebeforesuite()[pri:0, instance:test.login@1604f19]">&gt;&gt;prerequisitebeforesuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9335632</td>   <td></td> </tr>
+<tr bgcolor="749ee9">  <td>18/08/15 17:01:33</td>   <td>14</td> <td>&nbsp;</td><td title="&gt;&gt;basics.prerequisite()[pri:0, instance:test.basics@23a2f9]">&gt;&gt;prerequisite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9335632</td>   <td></td> </tr>
+<tr bgcolor="75a3bc">  <td>18/08/15 17:01:33</td>   <td>15</td> <td>&nbsp;</td><td title="&gt;&gt;login.Webprerequisite()[pri:0, instance:test.login@1604f19]">&gt;&gt;Webprerequisite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9335632</td>   <td></td> </tr>
+<tr bgcolor="749ee9">  <td>18/08/15 17:01:33</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;basics.beforeclass()[pri:0, instance:test.basics@23a2f9]">&gt;&gt;beforeclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9335632</td>   <td></td> </tr>
+<tr bgcolor="749ee9">  <td>18/08/15 17:01:33</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;basics.prerequisitebeforemethod()[pri:0, instance:test.basics@23a2f9]">&gt;&gt;prerequisitebeforemethod</td> 
+<td>&nbsp;</td>  <td>main@9335632</td>   <td></td> </tr>
+<tr bgcolor="749ee9">  <td>18/08/15 17:01:33</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics.Demo()[pri:0, instance:test.basics@23a2f9]">Demo</td> 
+  <td>main@9335632</td>   <td></td> </tr>
+<tr bgcolor="749ee9">  <td>18/08/15 17:01:33</td>   <td>42</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;basics.prerequisiteaftermethod()[pri:0, instance:test.basics@23a2f9]">&lt;&lt;prerequisiteaftermethod</td> 
+<td>&nbsp;</td>  <td>main@9335632</td>   <td></td> </tr>
+<tr bgcolor="749ee9">  <td>18/08/15 17:01:33</td>   <td>43</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;basics.prerequisitebeforemethod()[pri:0, instance:test.basics@23a2f9]">&gt;&gt;prerequisitebeforemethod</td> 
+<td>&nbsp;</td>  <td>main@9335632</td>   <td></td> </tr>
+<tr bgcolor="749ee9">  <td>18/08/15 17:01:33</td>   <td>43</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics.Demo1()[pri:0, instance:test.basics@23a2f9]">Demo1</td> 
+  <td>main@9335632</td>   <td></td> </tr>
+<tr bgcolor="749ee9">  <td>18/08/15 17:01:33</td>   <td>47</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;basics.prerequisiteaftermethod()[pri:0, instance:test.basics@23a2f9]">&lt;&lt;prerequisiteaftermethod</td> 
+<td>&nbsp;</td>  <td>main@9335632</td>   <td></td> </tr>
+<tr bgcolor="749ee9">  <td>18/08/15 17:01:33</td>   <td>48</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;basics.afterclass()[pri:0, instance:test.basics@23a2f9]">&lt;&lt;afterclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9335632</td>   <td></td> </tr>
+<tr bgcolor="96f0f5">  <td>18/08/15 17:01:33</td>   <td>57</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics2.day()[pri:0, instance:test.basics2@c0edeb]">day</td> 
+  <td>main@9335632</td>   <td></td> </tr>
+<tr bgcolor="96f0f5">  <td>18/08/15 17:01:33</td>   <td>64</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics2.day1()[pri:0, instance:test.basics2@c0edeb]">day1</td> 
+  <td>main@9335632</td>   <td></td> </tr>
+<tr bgcolor="75a3bc">  <td>18/08/15 17:01:33</td>   <td>68</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.APIRest()[pri:0, instance:test.login@1604f19]">APIRest</td> 
+  <td>main@9335632</td>   <td></td> </tr>
+<tr bgcolor="75a3bc">  <td>18/08/15 17:01:33</td>   <td>71</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.MobileLogin()[pri:0, instance:test.login@1604f19]">MobileLogin</td> 
+  <td>main@9335632</td>   <td></td> </tr>
+<tr bgcolor="75a3bc">  <td>18/08/15 17:01:33</td>   <td>74</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebLoginhome()[pri:0, instance:test.login@1604f19]">WebLoginhome</td> 
+  <td>main@9335632</td>   <td></td> </tr>
+<tr bgcolor="75a3bc">  <td>18/08/15 17:01:33</td>   <td>78</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebSigninhome()[pri:0, instance:test.login@1604f19]">WebSigninhome</td> 
+  <td>main@9335632</td>   <td></td> </tr>
+<tr bgcolor="75a3bc">  <td>18/08/15 17:01:33</td>   <td>80</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebSignouthome()[pri:0, instance:test.login@1604f19]">WebSignouthome</td> 
+  <td>main@9335632</td>   <td></td> </tr>
+<tr bgcolor="749ee9">  <td>18/08/15 17:01:33</td>   <td>84</td> <td>&nbsp;</td><td title="&lt;&lt;basics.postrequisite()[pri:0, instance:test.basics@23a2f9]">&lt;&lt;postrequisite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9335632</td>   <td></td> </tr>
+<tr bgcolor="75a3bc">  <td>18/08/15 17:01:33</td>   <td>122</td> <td title="&lt;&lt;login.prerequisiteaftersuite()[pri:0, instance:test.login@1604f19]">&lt;&lt;prerequisiteaftersuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9335632</td>   <td></td> </tr>
 </table>
