--- a/TestNG/test-output/old/Loan project/toc.html
+++ b/TestNG/test-output/old/Loan project/toc.html
@@ -8,12 +8,12 @@
 <h3><p align="center">Results for<br/><em>Loan project</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>3 tests</td>
+<td>1 test</td>
 <td><a target='mainFrame' href='classes.html'>3 classes</a></td>
-<td>8 methods:<br/>
+<td>9 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
-&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (5)</a></td>
+&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
 </tr>
 <tr>
 <td><a target='mainFrame' href='groups.html'>0 group</a></td>
@@ -22,23 +22,7 @@
 </tr></table>
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Car loan (1/0/0)</td><td valign='top' align='right'>
-  <a href='Car loan.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-passed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>Home loan (4/0/0)</td><td valign='top' align='right'>
-  <a href='Home loan.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-passed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>personal loan (3/0/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>personal loan (9/0/0)</td><td valign='top' align='right'>
   <a href='personal loan.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
